--- a/styles/style.css
+++ b/styles/style.css
@@ -1,98 +1,118 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
 .quicksand-font {
   font-family: "Quicksand", serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 .raleway-font {
   font-family: "Raleway", serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
-*{
+
+* {
   margin: 0;
   padding: 0;
 }
-header,main{
-  background:url("../assets/bg.png"), linear-gradient(##F7F7F7,#F9E0B3);
+
+header,
+main {
+  background: url("../assets/bg.png");
 }
+
 /* colors */
-.orange-color{
+.orange-color {
   color: rgba(254, 163, 1, 1);
 }
-.blue-color{
-  color:rgba(1, 172, 253, 1) ;
+
+.blue-color {
+  color: rgba(1, 172, 253, 1);
 }
-.navber{
+
+.navber {
   display: flex;
-  align-items:center;
+  align-items: center;
   max-width: 1160px;
   justify-content: space-between;
   margin: 30px auto;
 }
-.logo-section{
+
+.logo-section {
   display: flex;
   align-items: center;
-  gap:11px;
+  gap: 11px;
 }
-.logo-title{
+
+.logo-title {
   font-size: 2rem;
   font-weight: 700;
   color: rgba(17, 17, 17, 1);
 }
-.list-item{
+
+.list-item {
   display: flex;
 }
-.list-item>a{
+
+.list-item>a {
   text-decoration: none;
 }
-.list-item>a>li{
+
+.list-item>a>li {
   list-style: none;
   margin-right: 30px;
 }
-.home{
+
+.home {
   font-size: 1.25rem;
   font-weight: 700;
   color: rgba(254, 163, 1, 1);
 }
-.about{
+
+.about {
   font-weight: 500;
   font-size: 1.25rem;
   color: rgba(1, 172, 253, 1);
 }
-.facilities{
+
+.facilities {
   font-weight: 500;
   font-size: 1.25rem;
   color: rgba(5, 212, 223, 1);
 }
-.admission{
+
+.admission {
   font-size: 1.25rem;
   font-weight: 500;
   color: rgba(93, 88, 239, 1);
 }
 
 /* btn style */
-.btn-primary{
+.btn-primary {
   font-size: 1.25rem;
   font-weight: 600;
   color: rgba(255, 255, 255, 1);
-  background-color:#FEA301;
+  background-color: #FEA301;
   border: none;
   border-radius: 12px;
   padding: 10px 60px;
 }
-.banner-btn{
-  font-size:1.25rem ;
+
+.banner-btn {
+  font-size: 1.25rem;
   font-weight: 700;
-  color:#FFFFFF;
+  color: #FFFFFF;
   padding: 10px 47px;
-  background-color:rgba(17, 17, 17, 1);
-  border-radius:12px;
+  background-color: rgba(17, 17, 17, 1);
+  border-radius: 12px;
   border: none;
   margin-top: 24px;
 }
-.btn-card{
+
+.btn-card {
   color: #FFFFFF;
   font-size: 0.9rem;
   font-weight: 500;
@@ -101,123 +121,150 @@ header,main{
   border: none;
   position: absolute;
 }
-.btn1{
+
+.btn1 {
   background-color: #3CD8E8;
   margin-top: -26px;
   margin-left: 38px;
 }
 
-.btn2{
+.btn2 {
   background-color: rgba(149, 178, 38, 1);
 }
-.btn3{
+
+.btn3 {
   background-color: rgba(93, 0, 240, 1);
 }
-.btn4{
-  background-color: aquamarine ;
+
+.btn4 {
+  background-color: aquamarine;
 }
-.btn5{
+
+.btn5 {
   background-color: green;
 }
 
 /* 3 dot style */
-.dot-icon{
+.dot-icon {
   display: none;
 }
-.dot-icon>div{
+
+.dot-icon>div {
   height: 3px;
   width: 35px;
   background-color: #000000;
   margin: 5px 0;
 }
-hr{
+
+hr {
   display: none;
 }
+
 /* banner section style */
-.banner-containt{
+.banner-containt {
   max-width: 1160px;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
-.banner-title{
-  font-size:3.5rem;
+
+.banner-title {
+  font-size: 3.5rem;
   font-size: 700;
   margin-bottom: 24px;
 }
-.banner-discription{
-   font-size: 1.25rem;
-   font-weight: 400;
-   color: rgba(17, 17, 17, .8);
+
+.banner-discription {
+  font-size: 1.25rem;
+  font-weight: 400;
+  color: rgba(17, 17, 17, .8);
 }
 
 /* section1 card style  */
-.curriculum-title{
+.curriculum-title {
   margin-top: 60px;
-  font-size:2.8rem ;
+  font-size: 2.8rem;
   font-weight: 700;
   text-align: center;
 }
-.cards{
+
+.cards {
   display: flex;
   justify-content: center;
   gap: 29px;
   max-width: 1160px;
   margin: 80px auto 50px auto;
 }
-.frist-card, .secound-card,.third-card{
+
+.frist-card,
+.secound-card,
+.third-card {
   border-radius: 19px;
   text-align: center;
   box-shadow: 0 0 29px 0.9px rgba(0, 0, 0, 0.05);
   padding: 65px 40px 53px 40px;
 }
-.frist-card{
-  background:linear-gradient(rgb(177, 228, 248),30%, white);
+
+.frist-card {
+  background: linear-gradient(rgb(177, 228, 248), 30%, white);
 }
-.secound-card{
-  background: linear-gradient(rgb(255, 244, 220),30%, white);
+
+.secound-card {
+  background: linear-gradient(rgb(255, 244, 220), 30%, white);
 }
-.third-card{
-  background: linear-gradient(rgba(238, 225, 255, 1),30%, white);
+
+.third-card {
+  background: linear-gradient(rgba(238, 225, 255, 1), 30%, white);
 }
-.card-title{
+
+.card-title {
   font-size: 1.25rem;
-  font-weight:700;
+  font-weight: 700;
   margin: 32px 0 33px 0;
 }
-.card-details{
+
+.card-details {
   font-size: 0.9rem;
   font-weight: 500;
   color: rgba(128, 128, 128, 1);
   margin-bottom: 33px;
 }
-.card-A,.card-B,.card-C{
+
+.card-A,
+.card-B,
+.card-C {
   text-decoration: none;
   font-size: 0.9rem;
   font-weight: 700;
 }
-.card-A{
+
+.card-A {
   color: rgba(100, 200, 255, 1);
 }
-.card-B{
-  color:rgba(240, 170, 0, 1) ;
+
+.card-B {
+  color: rgba(240, 170, 0, 1);
 }
-.card-C{
-  color:rgba(135, 0, 255, 1) ;
+
+.card-C {
+  color: rgba(135, 0, 255, 1);
 }
+
 /* slid contatn */
-.slid-contant{
+.slid-contant {
   display: flex;
   gap: 10px;
   justify-content: center;
   margin-top: 80px;
   margin-bottom: 60px;
 }
-.slid-contant>a{
+
+.slid-contant>a {
   text-decoration: none;
 }
-.arrow{
+
+.arrow {
   color: #FFFFFF;
   height: 60px;
   width: 60px;
@@ -233,54 +280,65 @@ hr{
 
 /* section2 disign stories */
 
-.stories-title{
-  font-size:2.8rem ;
+.stories-title {
+  font-size: 2.8rem;
   font-weight: 700;
   text-align: center;
-  margin-top:60px;
+  margin-top: 60px;
 }
-.stories-cards{
+
+.stories-cards {
   display: grid;
   gap: 20px;
   max-width: 1160px;
   margin: 60px auto;
-  grid-template-columns: repeat(3,1fr);
-  grid-template-rows: repeat(3,300px);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 300px);
 }
 
-.card-image{
+.card-image {
   width: 100%;
   border-radius: 16px 16px 0px 0px;
   position: relative;
 }
-.card1{
+
+.card1 {
   grid-row: span 2;
   border-radius: 16px;
   width: 100%;
   height: 100%;
   border: 1px solid black;
-  height: 630px ;
+  height: 630px;
   width: 540px;
 }
-.s-card{
+
+.s-card {
+  background-color: #FFFFFF;
   box-shadow: 0 0 29px 0.9px rgba(0, 0, 0, 0.05);
   border-radius: 16px;
 }
-.s-card-title1{
+
+.s-card-title1 {
   font-size: 1.2rem;
   font-weight: 700;
   padding: 61px 100px 51px 38px;
 }
-.s-card-title{
+
+.s-card-title {
   margin: 38px 38px 23px 38px;
 }
-.s-card-details{
+
+.s-card-details {
   font-size: 0.9rem;
   font-weight: 500;
-  color:rgba(102, 102, 102, 1) ;
+  color: rgba(102, 102, 102, 1);
   margin: 0px 68px 34px 38px;
 }
-.btn2,.btn3,.btn4,.btn5{
+
+.btn2,
+.btn3,
+.btn4,
+.btn5 {
   margin-top: -25px;
   margin-left: 38px;
 }
@@ -290,54 +348,70 @@ hr{
 
 
 
-
-
-
-
 /* Media quary style */
 @media screen and (max-width:576px) {
-  .logo-title,.list-item, .contact-btn{
+
+  .logo-title,
+  .list-item,
+  .contact-btn {
     display: none;
   }
-  .dot-icon{
+
+  .dot-icon {
     margin-right: 15px;
     display: inline-block;
   }
-  .logo{
+
+  .logo {
     margin-left: 15px;
   }
-  .banner-containt{
+
+  .banner-containt {
     flex-direction: column-reverse;
   }
-  .banner-img{
+
+  .banner-img {
     width: 100%;
   }
-  .banner-containt-txt{
+
+  .banner-containt-txt {
     text-align: center;
   }
-  .slid-contant{
-    display:none ;
+
+  .slid-contant {
+    display: none;
   }
-  .cards{
+
+  .cards {
     margin: 0;
     padding: 0;
     flex-direction: column;
   }
-  .frist-card, .secound-card,.third-card{
+
+  .frist-card,
+  .secound-card,
+  .third-card {
     margin: 10%;
   }
-  .card1{
+
+  .card1 {
     display: none;
   }
-  .stories-cards{
-    grid-template-columns: repeat(1,1fr);
+
+  .stories-cards {
+    grid-template-columns: repeat(2, 1fr);
     margin: 30px;
   }
-  .btn2,.btn3,.btn4,.btn5{
+
+  .btn2,
+  .btn3,
+  .btn4,
+  .btn5 {
     margin-top: -25px;
-    margin-left: 86px;
+    margin-left: 0px;
   }
-  .s-card-title{
+
+  .s-card-title {
     text-align: center;
   }
 }
