--- a/styles/style.css
+++ b/styles/style.css
@@ -127,11 +127,14 @@ main {
   margin-top: -26px;
   margin-left: 38px;
 }
-.card-btn , a{
+
+.card-btn,
+a {
   display: flex;
   justify-content: center;
   text-decoration: none;
   margin-top: 0px;
+  margin-bottom: 50px;
 }
 
 .btn2 {
@@ -161,6 +164,7 @@ main {
   background-color: #000000;
   margin: 5px 0;
 }
+
 /* banner section style */
 .banner-containt {
   max-width: 1160px;
@@ -345,6 +349,60 @@ main {
   margin-left: 20px;
 }
 
+footer{
+  background-color: rgba(1, 172, 253, 1);
+  padding: 123px 228px 174px 140px;
+}
+.footer-contant{
+  display: flex;
+  justify-content: space-between;
+}
+.footer-logo{
+  display: flex;
+  align-items: center;
+  gap: 11px;
+}
+.footer-title{
+  font-size: 2.6rem;
+  font-weight: 700;
+  color: white;
+}
+.footer-logo>img{
+  width: 10%;
+}
+.footer-discription{
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 1);
+  margin-top: 35px;
+  max-width:399px;
+}
+.footer-about{
+  color: white;
+}
+.footer-about>h4{
+  font-size: 1.25rem;
+  margin-bottom: 32px;
+}
+.options{
+  gap: 20px;
+}
+.footer-about>a{
+  text-decoration: none;
+}
+.footer-about>ul>li{
+  list-style: none;
+  margin-top: 20px;
+}
+.footer-social>h1{
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: white;
+}
+.social{
+  display: flex;
+  gap:10px ;
+  margin-top: 32px;
+}
 
 
 
@@ -366,6 +424,11 @@ main {
 
   .logo {
     margin-left: 15px;
+  }
+
+  .navber {
+    padding-bottom: 8px;
+    border-bottom: 1px solid #FEA301;
   }
 
   .banner-containt {
@@ -409,7 +472,7 @@ main {
   .btn3,
   .btn4,
   .btn5 {
-    margin-top: -25px;
+    margin-top: -20px;
     display: flex;
     justify-content: center;
     font-size: .5rem;
@@ -418,8 +481,35 @@ main {
   .s-card-title {
     text-align: center;
   }
-  .navber{
-    padding-bottom: 8px;
-    border-bottom: 1px solid #FEA301;
+  .footer-contant{
+    flex-direction: column;
+    padding: 30px;
   }
+  footer{
+    padding: 0;
+  }
+  .footer-logo{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+  .footer-logo>img{
+    width: 26%;
+  }
+  .footer-logo-section{
+    text-align: center;
+    margin: 10px;
+  }
+  .footer-about{
+    text-align: center;
+    margin-top: 30px;
+  }
+  .footer-social{
+    text-align: center;
+    margin-top: 30px;
+  }
+  .social{
+    justify-content: center;
+  }
+
 }
