--- a/styles/style.css
+++ b/styles/style.css
@@ -137,8 +137,9 @@ body {
   margin-top: -26px;
   margin-left: 38px;
 }
-.card-btn{
-  text-decoration: none; 
+
+.card-btn {
+  text-decoration: none;
   display: flex;
   text-align: center;
   justify-content: center;
@@ -160,19 +161,16 @@ body {
 .btn5 {
   background-color: green;
 }
-
-/* 3 dot style */
+/* 3 dot style  visible to mobile screen*/
 .dot-icon {
   display: none;
 }
-
 .dot-icon>div {
   height: 3px;
   width: 35px;
   background-color: #000000;
   margin: 5px 0;
 }
-
 /* banner section style */
 .banner-containt {
   max-width: 1160px;
@@ -181,19 +179,16 @@ body {
   align-items: center;
   justify-content: space-around;
 }
-
 .banner-title {
   font-size: 3.5rem;
   font-size: 700;
   margin-bottom: 24px;
 }
-
 .banner-discription {
   font-size: 1.25rem;
   font-weight: 400;
   color: rgba(17, 17, 17, .8);
 }
-
 /* section1 card style  */
 .curriculum-title {
   margin-top: 60px;
@@ -201,7 +196,6 @@ body {
   font-weight: 700;
   text-align: center;
 }
-
 .cards {
   display: flex;
   justify-content: center;
@@ -210,7 +204,6 @@ body {
   margin: 80px auto 50px auto;
   margin-bottom: 0px;
 }
-
 .frist-card,
 .secound-card,
 .third-card {
@@ -219,32 +212,26 @@ body {
   box-shadow: 0 0 29px 0.9px rgba(0, 0, 0, 0.05);
   padding: 65px 40px 53px 40px;
 }
-
 .frist-card {
   background: linear-gradient(rgb(177, 228, 248), 30%, white);
 }
-
 .secound-card {
   background: linear-gradient(rgb(255, 244, 220), 30%, white);
 }
-
 .third-card {
   background: linear-gradient(rgba(238, 225, 255, 1), 30%, white);
 }
-
 .card-title {
   font-size: 1.25rem;
   font-weight: 700;
   margin: 32px 0 33px 0;
 }
-
 .card-details {
   font-size: 0.9rem;
   font-weight: 500;
   color: rgba(128, 128, 128, 1);
   margin-bottom: 33px;
 }
-
 .card-A,
 .card-B,
 .card-C {
@@ -252,15 +239,12 @@ body {
   font-size: 0.9rem;
   font-weight: 700;
 }
-
 .card-A {
   color: rgba(100, 200, 255, 1);
 }
-
 .card-B {
   color: rgba(240, 170, 0, 1);
 }
-
 .card-C {
   color: rgba(135, 0, 255, 1);
 }
